k8s/authelia/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authelia
  labels:
    name: authelia
    app: authelia
