k8s/authelia/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: authelia
  labels:
    app: authelia
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9091
    protocol: TCP
    name: http
  selector:
    app: authelia
